<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:n2="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130.0dip"
        android:layout_height="130.0dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/splash_logo"
        n2:srcCompat="@drawable/join_the_herd_logo1" />


    <Button
        android:id="@id/button"
        android:layout_width="205.0dip"
        android:layout_height="28.0dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:background="#ffaaadaf"
        android:text="@string/button_text"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/oneLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/oneLBL"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/oneContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oneLBL"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/oneContent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/twoLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/oneContent"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/twoLBL"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/twoContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/twoLBL"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:text="@string/twoContent"
        android:textSize="16sp" />

</RelativeLayout>